kubernetes/cluster0/apps/longhorn-system/longhorn/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: kube-system
spec:
  hostnames:
    - longhorn.${SECRET_PUBLIC_DOMAIN}
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: networking
      sectionName: websecure
  rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: longhorn-frontend
        namespace: longhorn-system
        port: 80
      filters:
      - extensionRef:
          group: traefik.io
          kind: Middleware
          name: forwardauth-authelia
        type: ExtensionRef
      matches:                                                                                                                                                                                                                                                  
      - path:                                                                                                                                                                                                                                                   
          type: PathPrefix                                                                                                                                                                                                                                      
          value: /
